--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Versículo del Día</title>
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Versículo Bíblico Aleatorio</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <div class="container">
-    <h1>✨ Versículo del Día ✨</h1>
-    <div id="verse-container" class="verse">Haz clic para obtener un versículo</div>
+    <h1>Versículo Bíblico del Día</h1>
+    <div id="verse-container" class="verse">Haz clic para recibir inspiración 🙏</div>
     <button id="new-verse">Nuevo Versículo</button>
   </div>
   <script src="script.js"></script>
